Fix z-index

--- a/style/_variable.scss
+++ b/style/_variable.scss
@@ -5,5 +5,6 @@
   .token-list {
     position: absolute;
     top: -$token-margin;
+    z-index: 100;
   }
 }
